# attn-book

./: README.md  attention.tex  citations.bib  pca.cls
code/attnbook/: LICENSE  __init__.py  pyproject.toml
code/attnbook/attnbook/data/: __init__.py  data.py
code/experiments/: README.md  attention.py
